# Space-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  OpenGL.cpp  OpenGL.h  README.md  SceneManager.h  Texture.cpp  Texture.h  ToDo.md  format-code.sh  main.cpp
shaders/: testfrag.glsl  testvert.glsl
src/: OpenGL.cpp  OpenGL.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RendererConcept.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/log/: LogLevel.cc  LogLevel.h  LogMessage.cc  LogMessage.h  LogSink.cc  LogSink.h  Logger.cc  Logger.h
src/thread/: ActiveObject.cc  ActiveObject.h  ActiveObjects.cc  ActiveObjects.h
